--- a/index.html
+++ b/index.html
@@ -616,12 +616,12 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 1rem;
+            padding: 1.5rem; /* Diperbarui: Menyamakan padding horizontal dengan container & menambah padding vertikal */
             box-shadow: 0 -5px 40px rgba(58, 12, 163, 0.4);
         }
 
         footer p:first-child {
-            font-size: 15px;
+            font-size: 16px; /* Diperbarui: Menaikkan ukuran font agar mudah dibaca */
         }
 
         /* Utility Classes */
@@ -760,15 +760,15 @@
         </div>
 
         <!-- Portal Grid -->
-        <div id="portals-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 2rem; margin-bottom: 3.5rem;">
+        <div id="portals-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); gap: 2rem; margin-bottom: 3.5rem;">
             <!-- Portal cards rendered by JS -->
         </div>
     </main>
 
     <!-- Footer -->
     <footer class="content-layer" style="text-align: center; color: #fff;">
-        <p class="font-orbitron" style="font-size: 0.95rem; opacity: 0.9; font-weight: 600;">© 2025 Created by Thamuz The Annihilator | All Rights Reserved</p>
-        <p class="plasma-text font-orbitron" style="font-size: 0.8rem; margin-top: 0.6rem; font-weight: 500;">Forged by Uranus Support Technology</p>
+        <p class="font-orbitron" style="font-size: 1rem; opacity: 0.9; font-weight: 600;">© 2025 Created by Thamuz The Annihilator | All Rights Reserved</p>
+        <p class="plasma-text font-orbitron" style="font-size: 0.85rem; margin-top: 0.6rem; font-weight: 500;">Forged by Uranus Support Technology</p>
     </footer>
 
     <!-- Add Portal Modal -->
