--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thamuz - The Annihilator | Abyssal Portal</title>
+    <title>Uranus Fazry MLBB Portal | Thamuz The Annihilator</title>
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -814,11 +814,10 @@
 
             <!-- Epic Title -->
             <div style="display: inline-block; margin-bottom: 1.5rem;">
-                <h1 class="font-orbitron annihilator-text epic-title" style="font-size: 2.5rem; font-weight: 900; margin-bottom: 1rem;">THAMUZ — THE ANNIHILATOR</h1>
+                <h1 class="font-orbitron annihilator-text epic-title" style="font-size: 2.5rem; font-weight: 900; margin-bottom: 1rem;">THAMUZ THE ANNIHILATOR</h1>
             </div>
-            <p class="font-exo plasma-text" style="font-size: 1.125rem; text-transform: uppercase; letter-spacing: 0.1em; font-weight: 600;">Command the Abyssal Inferno</p>
+            <p class="font-exo plasma-text" style="font-size: 1.125rem; text-transform: uppercase; letter-spacing: 0.1em; font-weight: 600;">MLBB Creator & Web Developer</p>
             <p style="max-width: 42rem; margin: 1.5rem auto 0; font-size: 1rem; line-height: 1.6; color: rgba(0, 180, 216, 0.7);">
-                Forge your path through the cosmic void. Harness the destructive power of the abyss and bend reality to your will.
             </p>
         </header>
 
@@ -989,14 +988,14 @@
                     url: 'https://api.whatsapp.com/send/?phone=6287872521809&text=Halo%2C+saya+ingin+membeli+Akses+Website+Premium+Tanpa+Iklan+sebesar+Rp25.000.+Mohon+transfer+ke+DANA+087734421123+dan+kirimkan+bukti+pembayarannya.+Pesanan+akan+diproses+maksimal+1x24+jam.+Terima+kasih.&type=phone_number&app_absent=0', 
                     icon: 'fas fa-gem', 
                     color: '#00b4d8', 
-                    description: 'Unlock premium access — all Uranus websites ad-free for Rp25K' 
+                    description: 'Upgrade sekarang — akses semua website uranus tanpa iklan cuma Rp25K' 
                 },
                 { 
-                    name: 'Buy Thamuz The Annihilator', 
+                    name: 'Buy Thamuz The Annihilator Code', 
                     url: 'https://api.whatsapp.com/send/?phone=6287872521809&text=Halo%2C+saya+ingin+membeli+Kode+Website+MLBB+Thamuz+Skin+The+Annihilator+sebesar+Rp100.000.+Mohon+transfer+ke+DANA+087734421123+dan+kirimkan+bukti+pembayarannya.+Pesanan+akan+diproses+maksimal+1x24+jam.+Terima+kasih.&type=phone_number&app_absent=0', 
                     icon: 'fas fa-skull-crossbones', 
                     color: '#ff6a00', 
-                    description: 'Get the Thamuz The Annihilator premium edition website code for Rp100K' 
+                    description: 'Beli kode website MLBB Thamuz The Annihilator edisi premium seharga Rp100K' 
                 }
             ];
 
