--- a/index.html
+++ b/index.html
@@ -720,9 +720,9 @@
     <!-- Background -->
     <div id="bg-container">
         <video id="bg-video" class="bg-media" autoplay muted playsinline>
-            <source src="https://files.catbox.moe/4gi6v5.mp4" type="video/mp4">
+            <source src="https://files.catbox.moe/9htlh6.mp4" type="video/mp4">
         </video>
-        <img id="bg-image" class="bg-media" src="https://i.imghippo.com/files/yx7530UAc.jpg" alt="Thamuz Background">
+        <img id="bg-image" class="bg-media" src="https://i.imghippo.com/files/KJrP4704wHU.jpg" alt="Thamuz Background">
     </div>
     <canvas id="particle-canvas"></canvas>
 
@@ -809,8 +809,9 @@
         <header style="text-align: center; margin-bottom: 3rem;">
             <!-- Profile -->
             <div class="profile">
-                <img src="https://i.imghippo.com/files/PBP5373k.jpg" alt="Thamuz Avatar" style="object-position: 50% 25%; will-change: transform;">
-            </div>
+                <!-- Ganti img dengan video, tambahkan object-position --><video src="https://files.catbox.moe/kwq2bv.mp4" alt="Profile Video" autoplay loop muted playsinline
+                style="object-position: 50% 25%; will-change: transform;"> <!-- [DITAMBAHKAN] Memicu akselerasi GPU --></video>
+        </div>
 
             <!-- Epic Title -->
             <div style="display: inline-block; margin-bottom: 1.5rem;">
@@ -837,8 +838,8 @@
 
     <!-- Footer -->
     <footer class="content-layer" style="text-align: center; color: #fff;">
-        <p class="font-orbitron" style="font-size: 0.875rem; opacity: 0.85;">© 2025 Abyssal Dominion | All Rights Reserved</p>
-        <p class="plasma-text font-orbitron" style="font-size: 0.75rem; margin-top: 0.5rem;">Powered by Cosmic Annihilation Technology</p>
+        <p class="font-orbitron" style="font-size: 0.875rem; opacity: 0.85;">© 2025 Created by Thamuz The Annihilator | All Rights Reserved</p>
+        <p class="plasma-text font-orbitron" style="font-size: 0.75rem; margin-top: 0.5rem;">Powered by Uranus Support Technology</p>
     </footer>
 
     <!-- Add Portal Modal -->
