--- a/index.html
+++ b/index.html
@@ -828,12 +828,12 @@
     </div>
 
     <!-- Main Content -->
-    <main class="container content-layer" style="padding-top: 100px; padding-bottom: 2rem;">
+    <main class="container content-layer" style="padding-top: 120px; padding-bottom: 2rem;">
         <header style="text-align: center; margin-bottom: 3rem;">
             <!-- Profile -->
             <div class="profile">
                 <!-- Ganti img dengan video, tambahkan object-position --><video src="https://files.catbox.moe/kwq2bv.mp4" alt="Profile Video" autoplay loop muted playsinline
-                style="object-position: 50% 25%; will-change: transform;"> <!-- [DITAMBAHKAN] Memicu akselerasi GPU --></video>
+                style="object-position: 50% 15%; will-change: transform;"> <!-- [DIPERBARUI] Posisi vertikal diubah dari 25% ke 15% agar lebih ke atas --></video>
         </div>
 
             <!-- Epic Title -->
