--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uranus Fazry MLBB Portal | THAMUZ THE ANNIHILATOR</title>
+    <title>Uranus Fazry MLBB Portal | Layla Nexus Sea</title>
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -828,17 +829,17 @@
     </div>
 
     <!-- Main Content -->
-    <main class="container content-layer" style="padding-top: 120px; padding-bottom: 2rem;">
+    <main class="container content-layer" style="padding-top: 100px; padding-bottom: 2rem;">
         <header style="text-align: center; margin-bottom: 3rem;">
             <!-- Profile -->
             <div class="profile">
                 <!-- Ganti img dengan video, tambahkan object-position --><video src="https://files.catbox.moe/kwq2bv.mp4" alt="Profile Video" autoplay loop muted playsinline
-                style="object-position: 50% 15%; will-change: transform;"> <!-- [DIPERBARUI] Posisi vertikal diubah dari 25% ke 15% agar lebih ke atas --></video>
+                style="object-position: 50% 25%; will-change: transform;"> <!-- [DITAMBAHKAN] Memicu akselerasi GPU --></video>
         </div>
 
             <!-- Epic Title -->
             <div style="display: inline-block; margin-bottom: 1.5rem;">
-                <h1 class="font-orbitron glitch-effect plasma-text" data-text="THAMUZ THE ANNIHILATOR" style="font-size: 2.75rem; font-weight: 900; margin-bottom: 1rem;">THAMUZ THE ANNIHILATOR</h1>
+                <h1 class="font-orbitron glitch-effect plasma-text" data-text="LAYLA NEXUS SEA" style="font-size: 2.75rem; font-weight: 900; margin-bottom: 1rem;">LAYLA NEXUS SEA</h1>
             </div>
             <p class="font-exo plasma-text" style="font-size: 1.125rem; text-transform: uppercase; letter-spacing: 0.1em; font-weight: 600;">MLBB Creator & Web Developer</p>
             <p style="max-width: 42rem; margin: 1.5rem auto 0; font-size: 1rem; line-height: 1.6; color: rgba(0, 180, 216, 0.7);">
@@ -861,7 +862,7 @@
 
     <!-- Footer -->
     <footer class="content-layer" style="text-align: center; color: #fff;">
-        <p class="font-orbitron" style="font-size: 0.875rem; opacity: 0.85;">© 2025 Created by THAMUZ THE ANNIHILATOR | All Rights Reserved</p>
+        <p class="font-orbitron" style="font-size: 0.875rem; opacity: 0.85;">© 2025 Created by Layla Nexus Sea | All Rights Reserved</p>
         <p class="plasma-text font-orbitron" style="font-size: 0.75rem; margin-top: 0.5rem;">Powered by Uranus Support Technology</p>
     </footer>
 
@@ -1008,18 +1009,18 @@
 
             const defaultPortals = [
                 { 
-                    name: 'Thamuz Premium Access', // Diperbarui
+                    name: 'Layla Premium Access', // Diperbarui
                     url: 'https://api.whatsapp.com/send/?phone=6287872521809&text=Halo%2C+saya+ingin+membeli+Akses+Website+Premium+Tanpa+Iklan+sebesar+Rp25.000.+Mohon+transfer+ke+DANA+087734421123+dan+kirimkan+bukti+pembayarannya.+Pesanan+akan+diproses+maksimal+1x24+jam.+Terima+kasih.&type=phone_number&app_absent=0', 
                     icon: 'fas fa-gem', 
                     color: '#00b4d8', 
                     description: 'Upgrade sekarang — akses semua website uranus tanpa iklan cuma Rp25K' 
                 },
                 { 
-                    name: 'Buy Thamuz Annihilator Code', // Diperbarui
+                    name: 'Buy Layla Nexus Sea Code', // Diperbarui
                     url: 'https://api.whatsapp.com/send/?phone=6287872521809&text=Halo%2C+saya+ingin+membeli+Kode+Website+MLBB+Layla+Skin+Nexus+Sea+sebesar+Rp100.000.+Mohon+transfer+ke+DANA+087734421123+dan+kirimkan+bukti+pembayarannya.+Pesanan+akan+diproses+maksimal+1x24+jam.+Terima+kasih.&type=phone_number&app_absent=0', 
                     icon: 'fas fa-shopping-cart', // Diperbarui
                     color: '#00b4d8', // Diperbarui
-                    description: 'Beli kode website MLBB Thamuz Annihilator edisi premium seharga Rp100K' // Diperbarui
+                    description: 'Beli kode website MLBB Layla Nexus Sea edisi premium seharga Rp100K' // Diperbarui
                 }
             ];
 
