--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
     </main>
 
     <!-- Footer --><footer class="content-layer" style="text-align: center; color: #fff;">
-        <p class="font-orbitron" style="font-size: 0.875rem; opacity: 0.85;">© 2025 Created by THAMUZ THE ANNIHILATOR | All Rights Reserved</p>
+        <p class="font-orbitron" style="font-size: 0.875rem; opacity: 0.85;">© 2025 Created by Thamuz The Annihilator | All Rights Reserved</p>
         <p class="plasma-text font-orbitron" style="font-size: 0.75rem; margin-top: 0.5rem;">Powered by Uranus Support Technology</p>
     </footer>
 
